Fix Bug Z-index In Template, Circles Img Added

--- a/assets/css/ToggleV_2.css
+++ b/assets/css/ToggleV_2.css
@@ -31,7 +31,7 @@
 .modal_v2{
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 10; /* Sit on top */
     left: 0;
     top: 0;
     width: 100vw; /* Full width */
@@ -43,7 +43,7 @@
     width: 100vw;
     height: 100vh;
     padding-top: 30px ;
-    z-index: 1;
+    z-index: 10 !important;
     animation: fadeInv2 0.5s;
     margin: 0;
 }
@@ -611,3 +611,27 @@
 .vjs-playing {
     pointer-events: none;
   }
+
+  /* 
+        .mw-body{
+        width:100% !important;
+      }
+      
+      
+      body{
+        width:100%;
+      }
+      
+      #top_title{
+        display:none;
+      }
+      
+      #content{
+        left:0px;
+        height:100%;
+        padding:0px;
+        width:100%;
+        margin-top:-10px;
+        margin-left:0px;
+      }
+      */
