--- a/assets/css/template-page.css
+++ b/assets/css/template-page.css
@@ -6,10 +6,10 @@ body{
 .mega-page-cnt-dim {
     width: 100%;
     height:auto;
-    background-color: rgb(6, 32, 88);
+    background-color: rgb(3, 22, 65);
     display: flex;
     flex-direction: row;
-    z-index: 10;
+    z-index: -100;
     box-shadow: 0px 30px 48px #888888;
     
 }
@@ -60,12 +60,14 @@ body{
 }
 
 .right-main-ouridea{
+    width: 80%;
+    height: auto;
     margin-top: 4rem;
+    z-index: 1;
+
 }
 
-.right-main-ourstory{
-    margin-top: 4rem;
-}
+
 
 
 
@@ -144,7 +146,7 @@ body{
 
 .background-circle2{
     position: absolute;
-    top: 40%;
+    top: 45%;
     right: 0px;
 }
 
@@ -153,13 +155,46 @@ body{
     height: 150px;
 }
 
+.background-circle3{
+    position: absolute;
+    top: 35%;
+    right: 20%;
+}
 
+.background-circle4{
+    position: absolute;
+    left: 0;
+    top: 80%;
+    transform: rotate(180deg);
+    z-index: 1;
+}
 
+.background-circle4 img{
+    height: 250px;
+}
 
+.background-circle5{
+    position: absolute;
+    right: 0;
+    bottom: -80%;
+}
 /* Circle Stays Inside Title */
 .integrated{
     position: relative;
 }
+
+.integrated h1 {
+    margin-bottom: 0;
+}
+
+.right-main-title-overview h1{
+    font-size: 50px;
+    font-family: 'Sarala', sans-serif;
+    margin-top:0px;
+    padding-top:0px;
+}
+
+
 
 /* HUMAN PRACTICES ABOVE CIRCLE */
 .pract{
@@ -168,11 +203,7 @@ body{
     margin-left: 10px;
 }
 
-.right-main-ouridea{
-    width: 80%;
-    height: auto;
-    /*background: blue;*/
-}
+
 
 .right-main-ouridea h2{
     color: white;
@@ -266,6 +297,8 @@ body{
     height: auto;
    /* background: blue;*/
     position: relative;
+    margin-top: 4rem;
+    z-index: 1;
 }
 
 .right-main-ourstory h1{
